[tool.black]
preview = true

[tool.poetry]
name = "hikka"
version = "1.7.9"
description = "Telegram userbot"
authors = ["kramiikk, t.me/kramiikk"]
license = "GNU AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python
gitpython
meval
requests
grapheme
emoji
psutil
tgcrypto
hikka-tl-new
rsa


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
