[tool.black]
preview = true

[tool.poetry]
name = "Her"
version = "1.7.9"
description = "Userbot"
authors = ["Friendly Telegram, Dan Gazizullin, codrago"]
license = "GNU AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
aiohttp=="^3.11.11"
emoji = "^2.1.0"
GitPython = "^3.1.44"
grapheme = "^0.6.0"
hikka-tl-new = "^2.0.8"
meval = "^2.5"
psutil = "^6.1.1"
requests = "^2.32.3"
rsa = "^4.9"
Telethon = "^1.38.1"
tgcrypto = "^1.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
